# opentaskai-web3-solana

./: .gitignore  Anchor.toml  accounts.json  deploy.sh  package.json  pnpm-lock.yaml  readme.md  test-dev.sh  test.sh  tsconfig.json
app/src/idl/: payment.ts
migrations/: deploy.ts
programs/payment/: Cargo.toml
programs/payment/src/: errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/payment/src/instructions/: admin.rs  deposit.rs  freeze.rs  initialize.rs  initialize_program_token.rs  mod.rs  settle.rs  transfer.rs  unfreeze.rs  withdraw.rs
scripts/: accounts.ts  payment.ts  tokens.ts  utils.ts
tests/: common.ts  payment.test.ts  payment.ts
